fix html preview btn on mobile

--- a/pkg/web/static/styles.css
+++ b/pkg/web/static/styles.css
@@ -453,7 +453,7 @@ pre.code-block:hover .code-preview-btn {
     .code-preview-btn {
         opacity: 1 !important;
         bottom: 4px !important;
-        right: 26px !important;
+        right: 4px !important;
     }
 }
 
